--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hotjar": "5.0.0",
     "react-icons": "4.4.0",
     "react-input-mask": "2.0.4",
+    "react-qr-code": "2.0.7",
     "react-table": "7.8.0"
   },
   "devDependencies": {
