--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "7.1.0",
     "graphql": "16.5.0",
     "next": "12.2.3",
+    "next-compose-plugins": "2.2.1",
     "next-pwa": "5.5.5",
     "nookies": "2.5.2",
     "pix-utils": "2.2.2",
