--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@chakra-ui/react": "2.2.6",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
+    "@uiw/react-md-editor": "3.6.0",
     "apollo-upload-client": "17.0.0",
+    "babel-plugin-transform-remove-imports": "1.7.0",
     "framer-motion": "7.1.0",
     "graphql": "16.5.0",
     "next": "12.2.3",
     "next-compose-plugins": "2.2.1",
     "next-pwa": "5.5.5",
+    "next-remove-imports": "1.0.7",
     "nookies": "2.5.2",
     "pix-utils": "2.2.2",
     "react": "18.2.0",
