--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@apollo/client": "3.6.9",
     "@chakra-ui/react": "2.2.6",
+    "@chakra-ui/styled-system": "2.3.1",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "@uiw/react-md-editor": "3.6.0",
